# MNIST_CUDA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: README.md
includes/: activation.cuh  error_checking.cuh  layer.cuh  linear_layer.cuh  load_mnist.cuh  loss.cuh  mlp.cuh  mlp_mnist.cuh  neural_network.cuh  validation.cuh
src/: activation.cu  cuda_speedtest.cu  linear_layer.cu  load_mnist.cu  loss.cu  main.cu  torch_speedtest.cu  validation.cu
tests/: cuda_kernel_tests.cu
